# cppdev-hw5-graphics-editor

./: CMakeLists.txt  Doxyfile  README.md  main.cpp  primitive.h  test_version.cpp  vector_graphics_editor.cpp  vector_graphics_editor.h  vector_image.cpp  vector_image.h
.github/workflows/: documentation.yaml  release.yml
html/: annotated.html  classVectorGraphicsEditor-members.html  classVectorGraphicsEditor.html  classVectorImage-members.html  classVectorImage.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherits.html  lib_8cpp.html  lib_8cpp__incl.map  lib_8cpp__incl.md5  lib_8h.html  lib_8h__dep__incl.map  lib_8h__dep__incl.md5  lib_8h_source.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  md_README.html  menudata.js  pages.html  primitive_8cpp.html  primitive_8cpp__incl.map  primitive_8cpp__incl.md5  primitive_8h.html  primitive_8h__dep__incl.map  primitive_8h__dep__incl.md5  (+39 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  (+22 more)
latex/: annotated.tex  classVectorGraphicsEditor.tex  classVectorImage.tex  files.tex  hierarchy.tex  lib_8cpp.tex  lib_8cpp__incl.md5  lib_8h.tex  lib_8h__dep__incl.md5  main_8cpp.tex  main_8cpp__incl.md5  md_README.tex  primitive_8cpp.tex  primitive_8cpp__incl.md5  primitive_8h.tex  primitive_8h__dep__incl.md5  refman.tex  structColor.tex  structLine.tex  structLine__coll__graph.md5  structLine__inherit__graph.md5  structPoint.tex  structPoint__coll__graph.md5  structPoint__inherit__graph.md5  structPrimitive.tex  structPrimitive__inherit__graph.md5  test__version_8cpp.tex  test__version_8cpp__incl.md5  vector__graphics__editor_8cpp.tex  vector__graphics__editor_8cpp__incl.md5  vector__graphics__editor_8h.tex  vector__graphics__editor_8h__dep__incl.md5  vector__graphics__editor_8h__incl.md5  vector__image_8cpp.tex  vector__image_8cpp__incl.md5  vector__image_8h.tex  vector__image_8h__dep__incl.md5  vector__image_8h__incl.md5
